manifest/https-redirect.yaml
# Redirect to https
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirecthttp
spec:
  redirectScheme:
    scheme: https
    permanent: true
