manifest/dpgraham-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dpgraham
  namespace: dpgraham

spec:
  ports:
    - name: http
      port: 80
  selector:
    app: dpgraham
