manifest/dpgraham-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dpgraham
  namespace: dpgraham
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: dpgraham-redirecthttp@kubernetescrd
spec:
  tls:
  - hosts:
    - dpgraham.com
    secretName: le-prod
  rules:
    - host: dpgraham.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dpgraham
                port:
                  number: 80
